# roguely_c

./: .gitignore  CMakeLists.txt
src/: config.h  main.c  map.c  map.h  renderer.c  renderer.h  sprite_sheet.c  sprite_sheet.h
src/core/: vec2.c  vec2.h
src/entity/: enemy.c  enemy.h  player.c  player.h
